# poll_llm

./: .gitignore  README.md  config.py  main.py  pyproject.toml
app/: app.py  app2.py  config.py  data.py  dates.py  parser_date.py  plots.py  utils.py
config/: poll.json
llm_cache/: cache.db  cache.db-shm  cache.db-wal
llm_utils/: ollama_client.py  openai_client.py  runner.py  utils.py
modules/: ollama_client.py  output.py  prompt.py  quota.py  runner.py
notebooks/: analysis.ipynb
prompts/: candidates.py  persona.jinja2  poll_question.jinja2  prompts.py  questionnaire.json
quotas/: definitions.py  generate_quotas.py  get_quotas_data.py  quotas.csv  sample.csv
results/: results.parquet
