[project]
name = "poll-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.46",
    "diskcache>=5.6.3",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "numpy>=2.5.1",
    "ollama>=0.6.2",
    "openai>=2.46.0",
    "polars>=1.42.1",
    "s3fs>=2026.6.0",
]
